# react-apollo-django-strawberry-boilerplate

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  test_mutations
client/: package.json  tsconfig.json
client/public/: index.html
client/src/: App.js  index.css  index.js
client/src/api/apollo/: client.js
client/src/api/mutations/: index.js
client/src/assets/: Detail_Level_01_Regions_EPSG32629.json  Detail_Level_01_Regions_WGS84.json  Detail_Level_02_Communes_EPSG32629.json  Detail_Level_02_Communes_WGS84.json  Detail_Level_03_FarmLeaders_Farms_Fields_WGS84.json
client/src/auth/: tokenProviders.js
client/src/constants/: routes.js
client/src/hoc/: isAuth.js
config/nginx/: boilerplate.conf
server/: .pre-commit-config.yaml  Dockerfile  manage.py  pyproject.toml  pytest.ini
server/accounts/: admin.py  managers.py  models.py  mutations.py  resolvers.py  schema.py  types.py
server/accounts/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_first_name_and_more.py  0003_lastverificationcode_user_code.py  0004_remove_user_code_lastverificationcode_user.py  0005_remove_user_is_verified_user_avatar.py  0006_alter_user_avatar.py
server/accounts/templates/: forgot_password.html
server/accounts/tests/: query_mutations.py  query_queries.py  test_mutations.py  test_queries.py  test_views.py  utils.py
server/server/: asgi.py  celery.py  middleware.py  schema.py  subscriptions.py  tasks.py  token_auth.py  urls.py  utils.py  wsgi.py
server/server/settings/: base.py  test_settings.py
(+18 files in other folders)
